Add a note on Sun as being broken.

--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -432,6 +432,10 @@ bootstrap and install GCC you first have to install a pre-built
 compiler, for example from <a href="http://www.sunfreeware.com/">
 http://www.sunfreeware.com</a>.</p>
 
+<p>Sun as 4.X is broken in that it cannot cope with long symbol names.
+See the <a href="../faq.html#squangle">How to work around too long C++
+symbol names?</a> FAQ entry.</p>
+
 
 <hr>
 <h3><a name="sparc-sun-solaris2.7">sparc-sun-solaris2.7</a></h3>
@@ -489,7 +493,7 @@ at <a href="http://www.goof.com/pcg/os2/">http://www.goof.com/pcg/os2/</a>.</p>
 
 <hr>
 <p><a href="./index.html">Return to the GCC Installation page</a></p>
-<p><i>Last modified on August 17, 1999.</i></p>
+<p><i>Last modified on August 27, 1999.</i></p>
 
 </body>
 </html>
