Transform "all ELF targets" into a new entry and add it to a second, new table of content. Originally by Brian Ford <ford@vss.fsi.com>.

--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -31,6 +31,10 @@
   <li><a href="#win+os2">GCC with Windows or OS/2</a></li>
 </ul>
 
+<ul>
+  <li><a href="#elf_targets">all ELF targets (SVR4, Solaris, etc.)</a></li>
+</ul>
+
 
 <!-- -------- host/target specific issues start here ---------------- -->
 
@@ -472,12 +476,6 @@ for this platform, too.</p>
 
 <p>GCC version 2.95 is not able to compile code correctly for <code>sparc64</code> targets.  Users of the Linux kernel, at least, can use the <code>sparc32</code> program to start up a new shell invocation with an environment that causes <code>configure</code> to recognize (via <code>uname -a</code>) the system as <code>sparc-*-*</code> instead.</p>
 
-<p><b>all ELF targets (SVR4, Solaris, etc.)</b><br>
-C++ support is significantly better on ELF targets if you use the GNU
-linker; duplicate copies of inlines, vtables and template instantiations
-will be discarded automatically.</p>
-
-
 <hr>
 <h3><a name="win+os2"></a>GCC with Windows or OS/2</h3>
 
@@ -490,6 +488,13 @@ support.
 <p>GCC does not currently support OS/2.  However, Andrew Zabolotny has been
 working on a generic os/2 port with pgcc.  The current code code can be found
 at <a href="http://www.goof.com/pcg/os2/">http://www.goof.com/pcg/os2/</a>.</p>
+
+<hr>
+<h3><a name="elf_targets">all ELF targets (SVR4, Solaris, etc.)</a></h3>
+
+<p>C++ support is significantly better on ELF targets if you use the GNU
+linker; duplicate copies of inlines, vtables and template instantiations
+will be discarded automatically.</p>
 
 <hr>
 <p><a href="./index.html">Return to the GCC Installation page</a></p>
