Improve description of how to add target tools. Minor markup fixes. By Brian Ford <ford@vss.fsi.com>.

--- a/htdocs/install/build.html
+++ b/htdocs/install/build.html
@@ -22,18 +22,20 @@ recommended setup where <i>objdir</i> is different from <i>srcdir</i>.)
 will build the entire GCC system, which includes the following steps:
 
 <ul>
-  <li> Build host tools necessary to build the compiler such as texinfo, bison,
-  gperf.
+  <li>Build host tools necessary to build the compiler such as texinfo, bison,
+  gperf.</li>
 
-  <li> Build target tools for use by the compiler such as gas, gld, and
-  binutils if they have been properly unpacked into the GCC source tree.
+  <li> Build target tools for use by the compiler such as binutils (bfd,
+  binutils, gas, gprof, ld, and opcodes)<br>
+  if they have been individually linked or moved into the top level GCC source
+  tree before configuring.</li>
 
-  <li> Perform a 3-stage bootstrap of the compiler.
+  <li>Perform a 3-stage bootstrap of the compiler.</li>
 
-  <li> Perform a comparison test of the stage2 and stage3 compilers.
+  <li>Perform a comparison test of the stage2 and stage3 compilers.</li>
 
-  <li> Build runtime libraries using the stage3 compiler from the previous
-  step.
+  <li>Build runtime libraries using the stage3 compiler from the previous
+  step.</li>
 </ul>
 
 <p>If you are short on disk space you might consider `<code>make 
@@ -75,16 +77,18 @@ cross compiler.
 your corss compiler, issue the command "make", which performs the
 following steps:
 <ul>
-  <li> Build host tools necessary to build the compiler such as texinfo, bison,
-  gperf.<p>
+  <li>Build host tools necessary to build the compiler such as texinfo, bison,
+  gperf.</li>
 
-  <li> Build target tools for use by the compiler such as gas, gld, and
-  binutils if they have been properly unpacked into the GCC source tree.<p>
+  <li>Build target tools for use by the compiler such as binutils (bfd,
+  binutils, gas, gprof, ld, and opcodes)<br>
+  if they have been individually linked or moved into the top level GCC source
+  tree before configuring.</li>
 
-  <li> Build the compiler (single stage only).<p>
+  <li>Build the compiler (single stage only).</li>
 
-  <li> Build runtime libraries using the compiler from the previous
-  step.
+  <li>Build runtime libraries using the compiler from the previous
+  step.</li>
 </ul>
 
 <p>Note that if an error occurs in any step the make process will exit.
