--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -5,6 +5,9 @@
 <body>
 <h1 align="center">Build status for GCC 2.95</h1>
 
+<p><b>alpha-dec-osf4.0b</b><br>
+Successful
+
 <p><b>alpha-dec-osf4.0f</b><br>
 Successful
 
@@ -92,6 +95,9 @@ Successful
 <p><b>powerpc-unknown-linux-gnu</b><br>
 Successful
 
+<p><b>rs6000-ibm-aix4.1.4.0</b><br>
+Successful
+
 <p><b>rs6000-ibm-aix4.2.1.0</b><br>
 Successful
 
@@ -124,7 +130,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on August 25, 1999.</i>
+<i>Last modified on August 28, 1999.</i>
 
 </body>
 </html>
