--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -68,6 +68,9 @@ Successful
 <p><b>i586-pc-linux-gnu</b><br>
 Successful
 
+<p><b>i586-pc-sco3.2v5.0.5</b><br>
+Successful
+
 <p><b>i686-pc-linux-gnu</b><br>
 Successful
 
@@ -130,7 +133,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on August 28, 1999.</i>
+<i>Last modified on August 29, 1999.</i>
 
 </body>
 </html>
