--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -12,11 +12,11 @@ the Java Language.
 
     <blockquote>
       <p><b>New</b>: We've released version <a
-	href="ftp://sourceware.cygnus.com/pub/java/libgcj-2.95.tar.gz">2.95
+	href="ftp://sourceware.cygnus.com/pub/java/libgcj-2.95.1.tar.gz">2.95
 	  of the ``libgcj'' runtime</a>!  This version corresponds with
 	the <a
-	  href="http://egcs.cygnus.com/ml/gcc-announce/1999/msg00008.html">gcc
-	  2.95 release</a>.
+	  href="http://egcs.cygnus.com/gcc-2.95/gcc-2.95.1.html">gcc
+	  2.95.1 release</a>.
     </blockquote>
 
 <h2>Mailing lists</h2>
