--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -26,6 +26,9 @@ Successful
 <p><b>alphaev6-unknown-linux-gnu</b><br>
 Successful
 
+<p><b>armv4l-unknown-linux-gnu</b><br>
+Successful
+
 <p><b>hppa1.1-hp-hpux10.01</b><br>
 Successful
 
@@ -133,7 +136,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on August 29, 1999.</i>
+<i>Last modified on August 30, 1999.</i>
 
 </body>
 </html>
