--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -10,12 +10,14 @@
 http://www.gnu.org/software/gcc/faq.html">http://www.gnu.org/software/gcc/faq.html</a>.</p>
 
 <p>This FAQ tries to answer specific questions concerning GCC. For
-general information regarding C resp. C++, please check the 
+general information regarding C, C++, resp. Fortran please check the 
 <a href="http://www.eskimo.com/~scs/C-faq/top.html">comp.lang.c FAQ</a>,
 <a href="http://www.cerfnet.com/~mpcline/On-Line-C++-FAQs/">
-comp.lang.c++ FAQ</a>, and the
+comp.lang.c++ FAQ</a>,
 <a href="http://reality.sgi.com/austern_mti/std-c++/faq.html">
-comp.std.c++ FAQ</a>.</p>
+comp.std.c++ FAQ</a>, and the <a
+href="http://www.fortran.com/fortran/info.html">Fortran Information
+page</a>.</p>
 
 <hr>
 
@@ -1034,7 +1036,7 @@ is declared pure-virtual [class.dtor]/7.</p>
 <hr>
 
 <p><a href="index.html">Return to the GCC home page</a></p>
-<p><i>Last modified:  August 24, 1999</i></p>
+<p><i>Last modified:  August 30, 1999</i></p>
 
 </body>
 </html>
