Recommend against binutils 2.9.1 on sparc-sun-solaris*.

--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -24,6 +24,7 @@
   <li><a href="#mips*-sgi-irix6">mips*-sgi-irix6</a></li>
   <li><a href="#powerpc-*-linux-gnu*">powerpc-*-linux-gnu*</a></li>
   <li><a href="#*-*-solaris*">*-*-solaris*</a></li>
+  <li><a href="#sparc-sun-solaris*">sparc-sun-solaris*</a></li>
   <li><a href="#sparc-sun-solaris2.7">sparc-sun-solaris2.7</a></li>
   <li><a href="#sunv5">Sun V5.0 Compiler Bugs</a></li>
   <li><a href="#sparc-sun-sunos*">sparc-sun-sunos*</a></li>
@@ -440,6 +441,13 @@ http://www.sunfreeware.com</a>.</p>
 <p>Sun as 4.X is broken in that it cannot cope with long symbol names.
 See the <a href="../faq.html#squangle">How to work around too long C++
 symbol names?</a> FAQ entry.</p>
+
+
+<hr>
+<h3><a name="sparc-sun-solaris*">sparc-sun-solaris*</a></h3>
+
+<p>binutils 2.9.1 has known bugs on this platform. We recommend to use the
+vendor tools (Sun as, Sun ld) until these have been fixed.</p>
 
 
 <hr>
