New egcstension: Patch to build elsewhere than in the source directory using Sun make Based on a submission by Hans-Peter Nilsson <hans-peter.nilsson@axis.com>.

--- a/htdocs/egcstensions.html
+++ b/htdocs/egcstensions.html
@@ -23,11 +23,28 @@ achieves substantial speed improvements over egcs and gcc.</p>
 <p>This is an experimental port for the 8bit ATMEL AVR micro
 controllers.</p>
 
+<h2><a name="sun-make">Patch to build elsewhere than in the source
+directory using Sun make</a></h2>
+
+<p>Contact: <a href="mailto:hp@axis.se">hp@axis.se</a></p>
+
+<p>By means of a <a href="ftp://ftp.axis.se/pub/users/hp/gcc/gcc-2.95.1-sun-make-patch1.txt">patch for GCC 2.95.1</a> Sun make should be able to bootstrap
+the compiler even when using Sun make, which is not sufficiently standards
+compliant, for a <i>srcdir</i> != <i>objdir</i> setup.</p>
+
+<p>Apply it with (for example) GNU patch:
+<blockquote><code>
+patch -p1 -d <i>/path/to/gcc-2.95.1</i> &lt;
+gcc-2.95.1-sun-make-patch1.txt
+</code></blockquote>
+This patch is not supposed to interfere with proper building and
+installation on non-Sun systems or when using GNU make.</p>
+
 <hr>
 <p><a href="index.html">Return to the egcs home page</a>
 
 <hr>
-<p><i>Last modified:  June 23, 1998</i>
+<p><i>Last modified:  August 30, 1999</i>
 
 </body>
 </html>
