--- a/htdocs/egcstensions.html
+++ b/htdocs/egcstensions.html
@@ -1,23 +1,23 @@
 <html>
 <head>
-<title>egcs extensions</title>
+<title>GCC extensions</title>
 </head>
 <body>
-<h1 align="center">egcs extensions</h1>
+<h1 align="center">GCC extensions</h1>
 
 
-<p>This is a list of (experimental) extensions to egcs which, for one
+<p>This is a list of (experimental) extensions to GCC which, for one
 reason or the other, did not (yet) make it into the official source
 tree. Please direct feedback and bugreports to their respective
 maintainers, not our mailing lists.</p>
 
 <h2><a href="http://www.goof.com/pcg/index.html">PentiumGCC</a></h2>
-<p>The PentiumGCC (short PGCC) is an extension of egcs specifically
+<p>The PentiumGCC (short PGCC) is an extension of GCC specifically
 aimed at the newer Intel chips and their clones (Pentium, PPro,
 Pentium-II and the Cyrix6x86 and AMD-K6+ chips). The current goal is
-to enhance egcs to a point where it generates code as fast as PGCC,
+to enhance GCC to a point where it generates code as fast as PGCC,
 but until that work is finished PGCC is still maintained, and often
-achieves substantial speed improvements over egcs and gcc.</p>
+achieves substantial speed improvements over GCC.</p>
 
 <h2><a href="http://medo.fov.uni-mb.si/mapp/uTools/">ATMEL AVR port</a></h2>
 <p>This is an experimental port for the 8bit ATMEL AVR micro
@@ -41,7 +41,7 @@ This patch is not supposed to interfere with proper building and
 installation on non-Sun systems or when using GNU make.</p>
 
 <hr>
-<p><a href="index.html">Return to the egcs home page</a>
+<p><a href="index.html">Return to the GCC home page</a>
 
 <hr>
 <p><i>Last modified:  August 30, 1999</i>
