Clean-up after original "Sun make" addition.

--- a/htdocs/egcstensions.html
+++ b/htdocs/egcstensions.html
@@ -23,14 +23,12 @@ achieves substantial speed improvements over GCC.</p>
 <p>This is an experimental port for the 8bit ATMEL AVR micro
 controllers.</p>
 
-<h2><a name="sun-make">Patch to build elsewhere than in the source
-directory using Sun make</a></h2>
+<h2><a name="sun-make"><a href="ftp://ftp.axis.se/pub/users/hp/gcc/gcc-2.95.1-sun-make-patch1.txt">Patch
+to build elsewhere than in the source directory using Sun make</a></h2>
 
-<p>Contact: <a href="mailto:hp@axis.se">hp@axis.se</a></p>
-
-<p>By means of a <a href="ftp://ftp.axis.se/pub/users/hp/gcc/gcc-2.95.1-sun-make-patch1.txt">patch for GCC 2.95.1</a> Sun make should be able to bootstrap
-the compiler even when using Sun make, which is not sufficiently standards
-compliant, for a <i>srcdir</i> != <i>objdir</i> setup.</p>
+<p>If, for some reason, you cannot use GNU make nor build in the
+<i>srcdir</i>, this patch for GCC 2.95.1 will allow you to build GCC
+using Sun make in a <i>srcdir</i> != <i>objdir</i> setup.</p>
 
 <p>Apply it with (for example) GNU patch:
 <blockquote><code>
@@ -39,6 +37,8 @@ gcc-2.95.1-sun-make-patch1.txt
 </code></blockquote>
 This patch is not supposed to interfere with proper building and
 installation on non-Sun systems or when using GNU make.</p>
+
+<p>Contact: <a href="mailto:hp@axis.se">hp@axis.se</a></p>
 
 <hr>
 <p><a href="index.html">Return to the GCC home page</a>
