--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -17,9 +17,6 @@ Successful
 <p><b>alphaev56-dec-osf4.0d</b><br>
 Successful
 
-<p><b>alphapca56-unknown-linux-gnu</b><br>
-Successful
-
 <p><b>alphaev56-unknown-linux-gnu</b><br>
 Successful
 
@@ -27,6 +24,9 @@ Successful
 Successful
 
 <p><b>alphaev6-unknown-linux-gnu</b><br>
+Successful
+
+<p><b>alphapca56-unknown-linux-gnu</b><br>
 Successful
 
 <p><b>armv4l-unknown-linux-gnu</b><br>
@@ -89,6 +89,9 @@ Successful
 <p><b>mips-sgi-irix6.2</b><br>
 Successful
 
+<p><b>mips-sgi-irix6.3</b><br>
+Successful
+
 <p><b>mips-sgi-irix6.4</b><br>
 Successful
 
@@ -139,7 +142,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on August 30, 1999.</i>
+<i>Last modified on September 1, 1999.</i>
 
 </body>
 </html>
