--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -104,6 +104,31 @@ maintain and improve quality.
 
 <dl>
 
+<dt><b>September 3, 1999</b></dt>
+<dd>
+Long time GCC contributors Mark Mitchell and Richard Kenner have been
+given global write permissions.  They are authorized to install and
+approve patches to any part of the compiler.
+
+Richard Kenner will initially be working on merging in the remaining
+changes from the old GCC 2 sources.
+</dd>
+
+<dt><b>September 2, 1999</b></dt>
+<dd>
+Richard Henderson has finished merging the ia32 backend rewrite into the
+mainline GCC sources.  The rewrite is designed to improve optimization
+opportunities for the Pentium II target, but also provides a cleaner
+way to optimize for the Pentium III, AMD-K7 and other high end ia32
+targets as they appear.
+</dd>
+
+<dt<b>August 31, 1999</b></dt>
+<p>Cygnus Solutions has released 
+<a href="ftp://sourceware.cygnus.com/pub/java/libgcj-2.95..1.tar.gz">libgcj
+version 2.95.1</a> Java runtime libraries for use with GCC 2.95.1.
+</dd>
+
 <dt><b>August 19, 1999</b></dt>
 <dd>
 <a href="gcc-2.95/gcc-2.95.1.html">GCC 2.95.1 is released</a>.
@@ -122,17 +147,6 @@ from the
 version 2.95</a> Java runtime libraries for use with GCC 2.95.
 </dd>
 
-<dt><b>August 2, 1999</b></dt>
-<dd>
-Mumit Khan has 
-<a href="http://www.xraylith.wisc.edu/~khan/software/gnu-win32/">pre-built gcc-2.95 binary packages for Windows platforms</a>.
-</dd>
-
-<dt><b>July 31, 1999</b></dt>
-<dd>
-<a href="gcc-2.95/gcc-2.95.html">GCC 2.95 is released</a>.
-</dd>
-
 </dl>
 
 <a href="news.html">Older news and announcements...</a>
@@ -147,7 +161,7 @@ Mumit Khan has
 <address>
 <a href="about.html">The GCC team</a>
 <br>
-<small><i>Last modified on August 26, 1999.</i></small>
+<small><i>Last modified on September 3, 1999.</i></small>
 </address>
 
 </body>
