--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -10,6 +10,17 @@ home page</a>.
 
 <dl>
 
+<dt><b>August 2, 1999</b></dt>
+<dd>
+Mumit Khan has
+<a href="http://www.xraylith.wisc.edu/~khan/software/gnu-win32/">pre-built gcc-2.95 binary packages for Windows platforms</a>.
+</dd>
+
+<dt><b>July 31, 1999</b></dt>
+<dd>
+<a href="gcc-2.95/gcc-2.95.html">GCC 2.95 is released</a>.
+</dd>
+
 <dt><b>July 11, 1999</b></dt>
 <dd>
 Cygnus Solutions has donated support for a generic i386-elf target.
@@ -347,7 +358,7 @@ framework</b></a>.
 </dl>
 
 <hr>
-<i>Last modified on August 4, 1999.</i>
+<i>Last modified on September 3, 1999.</i>
 
 </body>
 </html>
