Fix typos and broken links.

--- a/htdocs/egcs-1.1/egcs-1.1.html
+++ b/htdocs/egcs-1.1/egcs-1.1.html
@@ -13,7 +13,7 @@
 GNU compilers using an open development environment.
 
 <p>EGCS 1.1 is a major new release of the EGCS compiler system.  It has been
-<a href="EGCS 1.1-test.html">extensively tested</a> and is believed to be
+<a href="egcs-1.1-test.html">extensively tested</a> and is believed to be
 stable and suitable for widespread use.
 
 <p>EGCS 1.1 is based on an June 6, 1998 snapshot of the GCC 2.8 development
@@ -67,7 +67,7 @@ provided by Stanford)</a>
 
 
 <hr>
-<i>Last modified on July 28, 1999.</i>
+<i>Last modified on September 4, 1999.</i>
 
 </body>
 </html>
