--- a/htdocs/egcs-1.1/features.html
+++ b/htdocs/egcs-1.1/features.html
@@ -66,12 +66,12 @@
 	<li> M68k has many micro-optimizations and Coldfire fixes.
      </ul>
   <li>Core compiler is based on the GCC development tree from June 9, 1998,
-  so we have all of the <a href="../EGCS 1.0/features-2.8.html">features
+  so we have all of the <a href="../egcs-1.0/features-2.8.html">features
   found in GCC 2.8</a>.
 </ul>
 
 <p><a href="../index.html">Return to the EGCS home page</a>
-<p><i>Last modified:  July 28, 1999</i>
+<p><i>Last modified:  September 4, 1999</i>
 
 </body>
 </html>
