--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -125,7 +125,7 @@ targets as they appear.
 
 <dt<b>August 31, 1999</b></dt>
 <p>Cygnus Solutions has released 
-<a href="ftp://sourceware.cygnus.com/pub/java/libgcj-2.95..1.tar.gz">libgcj
+<a href="ftp://sourceware.cygnus.com/pub/java/libgcj-2.95.1.tar.gz">libgcj
 version 2.95.1</a> Java runtime libraries for use with GCC 2.95.1.
 </dd>
 
