--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -123,8 +123,8 @@ way to optimize for the Pentium III, AMD-K7 and other high end ia32
 targets as they appear.
 </dd>
 
-<dt<b>August 31, 1999</b></dt>
-<p>Cygnus Solutions has released 
+<dt><b>August 31, 1999</b></dt>
+<dd>Cygnus Solutions has released 
 <a href="ftp://sourceware.cygnus.com/pub/java/libgcj-2.95.1.tar.gz">libgcj
 version 2.95.1</a> Java runtime libraries for use with GCC 2.95.1.
 </dd>
@@ -138,7 +138,7 @@ version 2.95.1</a> Java runtime libraries for use with GCC 2.95.1.
 <dd>
 A new snapshot of the new
 <a href="ftp://sourceware.cygnus.com/pub/libstdc++/libstdc++-2.90.6.tar.gz">
-Standard C++ Library V3</a>has been released.  You can find more information
+Standard C++ Library V3</a> has been released.  You can find more information
 from the
 <a href="http://sourceware.cygnus.com/libstdc++/">libstdc++ project's home page</a>.
 
