Add another entry.

--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -62,6 +62,9 @@ Successful
 <p><b>i386-pc-solaris2.5</b><br>
 Successful
 
+<p><b>i386-pc-solaris2.5.1</b><br>
+Successful
+
 <p><b>i386-pc-solaris2.6</b><br>
 Successful
 
@@ -142,7 +145,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on September 1, 1999.</i>
+<i>Last modified on September 5, 1999.</i>
 
 </body>
 </html>
