--- a/htdocs/java/new/index.html
+++ b/htdocs/java/new/index.html
@@ -45,7 +45,7 @@ i
 
 <br>
 <small>You could be sleeping, but instead you're reading about..<a href="tagline.html">.</a></small>
-<h1>The GNU Compiler for the Java<sup><a href="#javatm"><small>tm</small></a></sup> Programming Language</h1>
+<h1>The GNU Compiler for the Java<sup><a href="tm.html"><small>tm</small></a></sup> Programming Language</h1>
 
 <table border="0" cellpadding="4" width="95%">
 <tr bgcolor="#b0d0ff">
@@ -121,12 +121,13 @@ part of the <a href="http://www.gnu.org">GNU Project</a>, and released under the
 
 <hr>
 
-<blockquote>
-<a name="javatm">Java</a> and all Java-based marks are trademarks or 
-registered trademarks of Sun Microsystems, Inc. in the United States
-and other countries.  The Free Software Foundation and Cygnus Solutions
-are independent of Sun Microsystems, Inc.
-</blocquote>
+<address>
+<a href="about.html">The GCJ team</a>
+<br>
+<small>
+$Id$
+</small>
+</address>
 
 </body>
 </html>
