--- a/htdocs/java/new/mail.html
+++ b/htdocs/java/new/mail.html
@@ -43,14 +43,105 @@ i
 
 <td>
 
-<br>
+<br><br><br>
 <h1>The GCJ Mailing Lists</h1>
+
+<br>
+<table border="0" cellpadding="4" width="95%">
+<tr bgcolor="#b0d0ff">
+ <th align="left">
+ Mail Archives
+ </th>
+</tr>
+</table>
+<br>
+
+We have four gcj specific mailing lists set up.  Click on the links
+below to view the archives.
+
+<dl>
+<dt><b><a href="/ml/java-announce/">java-announce</a></b></dt>
+<dd>
+   Low volume, moderated, announcements-only mailing list.
+</dd>
+<dt><b><a href="/ml/java-discuss/">java-discuss</a></b></dt>
+<dd>
+   Moderate volume discussion/question mailing list.
+</dd>
+<dt><b><a href="/ml/java-patches/">java-patches</a></b></dt>
+<dd>
+   Moderate volume patch submission/discussion mailing list.
+</dd>
+<dt><b><a href="/ml/java-prs/">java-prs</a></b></dt>
+<dd>
+   Notification of new Problem Reports (PRs).
+</dd>
+</dl>
+
+<p>
+
+The archives are also available for downloading from 
+<a href="ftp://sourceware.cygnus.com/pub/java/mail-archives/">
+ftp://sourceware.cygnus.com/pub/java/mail-archives/</a>.
+
+<p>
+
+Since gcj is also part of GCC, the <a href="http://gcc.cygnus.com/lists.html">GCC mailing lists</a> are also relevant.
+
+<p>
+
+<table border="0" cellpadding="4" width="95%">
+<tr bgcolor="#b0d0ff">
+ <th align="left">
+ Subscribing
+ </th>
+</tr>
+</table>
+<br>
+
+<p>Use this handy little form to subscribe or unsubscribe from any
+of these lists:
+
+<blockquote>
+<form method="get" action="/cgi-bin/ml-request">
+  Mailing list: 
+  <select name="listname">
+   <option value="java-announce">java-announce
+   <option value="java-discuss">java-discuss
+   <option value="java-patches">java-patches
+   <option value="java-prs">java-prs
+  </select>
+  <tt>&nbsp;</tt>
+  <br>
+  Your e-mail address:
+  <input type="text" name="username" size="14">
+ <br>
+  <input type="checkbox" name="digest">Digest version
+  <tt>&nbsp;</tt>
+  <select name="operation">
+    <option value="subscribe">subscribe
+    <option value="unsubscribe">unsubscribe
+  </select>
+  <tt>&nbsp;</tt>
+ <input type="Submit" name="submit" value="Send in the request">
+</form>
+</blockquote>
+
+<p>If you have any questions about the mailing lists on this site,
+see our <a href="/ml/#faqs">Sourceware mailing list FAQs</a>.
 
 </td></tr>
 </table>
 
 <hr>
 
+<address>
+<a href="about.html">The GCJ team</a>
+<br>
+<small>
+$Id$
+</small>
+</address>
 
 </body>
 </html>
