--- a/htdocs/java/new/about.html
+++ b/htdocs/java/new/about.html
@@ -44,7 +44,7 @@ i
 <td>
 
 These pages are maintained by the GCJ team, which consists of
-numberous <a href="thanks.html">volunteers and contributors</a>.  The
+numerous <a href="thanks.html">volunteers and contributors</a>.  The
 web effort is coordinated by <a href="mailto:green@cygnus.com">Anthony
 Green</a>.
 
@@ -67,7 +67,7 @@ and you can easily track any changes or contribute some of your own.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id$
+$Id: about.html,v 1.1 1999/09/06 05:21:30 green Exp $
 </small>
 </address>
 
