--- a/htdocs/java/new/docs.html
+++ b/htdocs/java/new/docs.html
@@ -43,14 +43,125 @@ i
 
 <td>
 
-<br>
+<br><br><br>
 <h1>GCJ Documentation</h1>
+
+    We've written some miscellaneous documentation, plus a FAQ.
+
+    <ul>
+      <li>General <a href="gcj.html">gcj</a> information.
+      <li>General <a href="libgcj.html">runtime</a> information.
+      <li>How to <a href="compile.html">compile a Java program</a>
+      <li><a href="FAQ.html">Frequently Asked Questions</a>
+      <li>How to <a href="contribute.html">contribute</a>
+      <li><a href="papers/cni/t1.html">CNI Documentation</a>
+    </ul>
+
+<br>
+<table border="0" cellpadding="4" width="95%">
+<tr bgcolor="#b0d0ff">
+ <th align="left">
+Porting libgcj, the GCJ runtime.
+ </th>
+</tr>
+</table>
+<br>
+
+We've written three documents on how to port various components of the
+GCJ runtime to different target systems.
+
+<ul>
+<li>How to <a href="port-threads.html">port</a> the thread layer.
+<li>How to <a href="port-files.html">port</a> the file handling layer.
+<li>How to <a href="port-signals.html">port</a> the signal handling layer.
+</ul>
+
+<br>
+<table border="0" cellpadding="4" width="95%">
+<tr bgcolor="#b0d0ff">
+ <th align="left">
+Papers describing our work
+ </th>
+</tr>
+</table>
+<br>
+
+<p>The engineers on this project have written a number of papers for
+conferences and magazines.
+
+<ul>
+  <li><a name="CNI">
+      <b>February 1999</b>: "<cite>The Cygnus Native Interface for C++/Java Integration</cite>".
+       <br>[<a href="papers/cni/t1.html">HTML</a>] 
+           [<a href="papers/cni.sgml">SGML/Docbook source</a>]
+       <br>This is a programmer's manual which explains how to use
+       a Java-aware C++ compiler (G++) to write native methods for Gcj.
+       <br>The CNI design and ideas were proposed in
+       "<cite>Writing native Java methods in natural C++</cite>"
+       (November 1997).
+       <p>
+
+  <li><b>August 1998</b>: "<cite>No Silver Bullet - Garbage Collection for 
+      Java in Embedded Systems</cite>".
+      <br>[<a href="papers/nosb.html">HTML</a>] 
+          [<a href="papers/nosb.ps.gz">PS for presentation slides</a>]
+      <br>Author:  <a href="http://www.cygnus.com/~apbianco/">Alex Petit-Bianco</a>.
+      <p>
+
+  <li><b>November 1997</b>:  "<cite>Writing native Java methods in natural C++</cite>"
+      discusses interaction between Java and C++.  This is an early design
+      document;  see "<cite>The Cygnus Native Interface for C++/Java 
+      Integration</cite>" (February 1998) for the programmer's manual.
+      <br>[<a href="papers/native++.html">HTML</a>] 
+          [<a href="papers/native++.sgml">SGML/Docbook source</a>]
+      <br>Author: <a href="http://www.cygnus.com/~bothner/">Per Bothner</a>.
+      <p>
+
+  <li><b>October 1997</b>: "<cite>Compiling Java for Embedded Systems</cite>"
+      was presented by Per Bothner at the Embedded Systems Conference 
+      West in San Jose.  It provides a technical overview 
+      of our strategy and plans.  
+
+      <br>[<a href="http://www.cygnus.com/news/whitepapers/compiling.html">HTML</a>] 
+          [<a href="papers/compjava.pdf">PDF</a>] 
+          [<a href="papers/compjava.ps.gz">gzip'd Postscript</a>] 
+          [<a href="papers/esc97.sgml">SGML/Docbook source</a>] 
+          [<a href="papers/esc97w-slides.ps.gz">PS 
+          for presentation slides</a>].
+
+      <br>Author: <a href="http://www.cygnus.com/~bothner/">Per Bothner</a>.
+      <p>
+
+  <li><b>February 1997</b>: "<cite>A Gcc-based Java Implementation</cite>" is an older paper
+      presented by Per Bothner
+      at IEEE Compcon.  
+      <br>[<a href="papers/gcc-java.html">extended
+          abstract (HTML)</a>] 
+          [<a href="papers/gcc-java.ps.gz">complete
+          paper (Postscript)</a>]
+          [(<a href="papers/compcon97.ps.gz">slides 
+          for presentation</a>)]
+
+      <br>Author: <a href="http://www.cygnus.com/~bothner/">Per Bothner</a>.
+      <p>
+
+</ul>
 
 </td></tr>
 </table>
 
 <hr>
 
+<address>
+<a href="about.html">The GCJ team</a>
+<br>
+<small>
+$Id$
+</small>
+</address>
 
 </body>
 </html>
+
+
+
