--- a/htdocs/java/new/index.html
+++ b/htdocs/java/new/index.html
@@ -44,7 +44,9 @@ i
 <td>
 
 <br>
-<small>You could be sleeping, but instead you're reading about..<a href="tagline.html">.</a></small>
+<small>
+<!--#include="tagline"-->
+..<a href="tagline.html">.</a></small>
 <h1>The GNU Compiler for the Java<sup><a href="tm.html"><small>tm</small></a></sup> Programming Language</h1>
 
 <table border="0" cellpadding="4" width="95%">
@@ -125,7 +127,7 @@ part of the <a href="http://www.gnu.org">GNU Project</a>, and released under the
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id$
+$Id: index.html,v 1.2 1999/09/06 05:21:30 green Exp $
 </small>
 </address>
 
