Try to fix ssi.

--- a/htdocs/java/new/index.html
+++ b/htdocs/java/new/index.html
@@ -45,7 +45,7 @@ i
 
 <br>
 <small>
-<!--#include="tagline"-->
+<!--#include=tagline-->
 ..<a href="tagline.html">.</a></small>
 <h1>The GNU Compiler for the Java<sup><a href="tm.html"><small>tm</small></a></sup> Programming Language</h1>
 
@@ -127,7 +127,7 @@ part of the <a href="http://www.gnu.org">GNU Project</a>, and released under the
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.2 1999/09/06 05:21:30 green Exp $
+$Id: index.html,v 1.3 1999/09/06 05:57:50 green Exp $
 </small>
 </address>
 
