--- a/htdocs/java/new/index.html
+++ b/htdocs/java/new/index.html
@@ -45,7 +45,7 @@ i
 
 <br>
 <small>
-<!--#include "tagline"-->
+<!--#include file="tagline"-->
 ..<a href="tagline.html">.</a></small>
 <h1>The GNU Compiler for the Java<sup><a href="tm.html"><small>tm</small></a></sup> Programming Language</h1>
 
