--- a/htdocs/java/new/docs.html
+++ b/htdocs/java/new/docs.html
@@ -33,8 +33,6 @@
 
 </td>
 
-<td width=4>
-</td>
 <td width=2 bgcolor="black">
 i
 </td>
@@ -61,14 +59,14 @@ i
 <table border="0" cellpadding="4" width="95%">
 <tr bgcolor="#b0d0ff">
  <th align="left">
-Porting libgcj, the GCJ runtime.
+Porting the GCJ runtime.
  </th>
 </tr>
 </table>
 <br>
 
-We've written three documents on how to port various components of the
-GCJ runtime to different target systems.
+We've written three documents on how to port various components of
+GCJ runtime, libgcj, to different target systems.
 
 <ul>
 <li>How to <a href="port-threads.html">port</a> the thread layer.
@@ -117,10 +115,11 @@ conferences and magazines.
       <br>Author: <a href="http://www.cygnus.com/~bothner/">Per Bothner</a>.
       <p>
 
-  <li><b>October 1997</b>: "<cite>Compiling Java for Embedded Systems</cite>"
-      was presented by Per Bothner at the Embedded Systems Conference 
-      West in San Jose.  It provides a technical overview 
-      of our strategy and plans.  
+  <li><b>October 1997</b>: "<cite>Compiling Java for Embedded
+      Systems</cite>" was presented by Per Bothner at the Embedded
+      Systems Conference West in San Jose.  It provides a technical
+      overview of our strategy and plans at the time.  This is fairly
+      out of date now.
 
       <br>[<a href="http://www.cygnus.com/news/whitepapers/compiling.html">HTML</a>] 
           [<a href="papers/compjava.pdf">PDF</a>] 
@@ -156,7 +155,7 @@ conferences and magazines.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id$
+$Id: docs.html,v 1.2 1999/09/06 05:57:50 green Exp $
 </small>
 </address>
 
