--- a/htdocs/java/new/download.html
+++ b/htdocs/java/new/download.html
@@ -33,8 +33,6 @@
 
 </td>
 
-<td width=4>
-</td>
 <td width=2 bgcolor="black">
 i
 </td>
@@ -43,8 +41,63 @@ i
 
 <td>
 
-<br>
+<br><br><br>
 <h1>Downloading GCJ</h1>
+
+<table border="0" cellpadding="4" width="95%">
+<tr bgcolor="#b0d0ff">
+ <th align="left">
+ Current Release
+ </th>
+</tr>
+</table>
+<br>
+
+The most current stable release is 2.95.1.  The source distribution is
+provided in two parts: the compiler, gcj, and the runtime, libgcj.
+<p>
+Gcj is part of the Gnu Compiler Collection, GCC.  Follow the links on
+<a
+href="http://gcc.cygnus.com/gcc-2.95/gcc-2.95.1.html">http://gcc.cygnus.com/gcc-2.95/gcc-2.95.1.html</a>
+to download the compiler.  You will need either the full distribution,
+or each of the Core Compiler, C++ and Java distributions.
+
+<p>
+
+Libgcj 2.95.1 is available from
+<a href="ftp://sourceware.cygnus.com/pub/java/libgcj-2.95.1.tar.gz">
+ftp://sourceware.cygnus.com/pub/java/libgcj-2.95.1.tar.gz
+</a>
+
+<p>
+
+<table border="0" cellpadding="4" width="95%">
+<tr bgcolor="#b0d0ff">
+ <th align="left">
+ Development Sources
+ </th>
+</tr>
+</table>
+<br>
+
+The latest development sources are available in two forms: periodic
+snapshots, and directly from the cvs source repository.
+
+<h3>Snapshots</h3>
+GCC snapshots are made about once a week.  They are available from
+<a href="ftp://gcc.cygnus.com/pub/egcs/snapshots/index.html">ftp://gcc.cygnus.com/pub/egcs/snapshots/index.html</a>.
+<p>
+Libgcj snapshots are made nightly, and are available from
+<a href="ftp://sourceware.cygnus.com/pub/java/snapshot">ftp://sourceware.cygnus.com/pub/java/snapshot</a>.
+
+<h3>cvs</h3> 
+The easiest way to get libgcj is to check it out from the
+anonymous cvs repository.  Here's how:
+<pre>
+  cvs -d :pserver:anoncvs@anoncvs.cygnus.com:/cvs/java login
+    (password is ``anoncvs'')
+  cvs -z 9 -d :pserver:anoncvs@anoncvs.cygnus.com:/cvs/java co libgcj
+</pre>
 
 </td></tr>
 </table>
