--- a/htdocs/java/new/index.html
+++ b/htdocs/java/new/index.html
@@ -10,7 +10,7 @@
 <img src="gcj.jpg">
 </td></tr>
 <tr>
-<td>
+<td valign>
 <br>
 <table border=0><tr><td width="10"></td><td>
 <a href="index.html">Home</a><br>
@@ -29,12 +29,25 @@
 <a href="http://www.gnu.org">The GNU Project</a><br>
 <a href="http://www.cygnus.com">Cygnus Solutions</a><br>
 </td></tr></table>
+<br><br><br>
+<table border=0><tr><td width="10"></td><td>
+<small>
+<form method="get" action="http://sourceware.cygnus.com/cgi-bin/ml-request">
+Get our announcements:<br>
+<input type="hidden" name="digest" value="off">
+<input type="hidden" name="operation" value="subscribe">
+<input type="hidden" name="listname" value="java-announce">
+<input type="text" name="username" value="your e-mail-address" size="20">
+<br>
+<input type="Submit" name="submit" value="Subscribe!">
+</form>
+</small>
+</td></tr></table>
+
 </td></tr></table>
 
 </td>
 
-<td width=4>
-</td>
 <td width=2 bgcolor="black">
 i
 </td>
@@ -127,7 +140,7 @@ part of the <a href="http://www.gnu.org">GNU Project</a>, and released under the
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.5 1999/09/06 06:01:25 green Exp $
+$Id: index.html,v 1.7 1999/09/06 06:04:49 green Exp $
 </small>
 </address>
 
