--- a/htdocs/java/new/thanks.html
+++ b/htdocs/java/new/thanks.html
@@ -33,8 +33,6 @@
 
 </td>
 
-<td width=4>
-</td>
 <td width=2 bgcolor="black">
 i
 </td>
@@ -43,14 +41,79 @@ i
 
 <td>
 
-<br>
+<br><br><br>
 <h1>GCJ Credits</h1>
+
+Many people contribute to the GCJ project, and in many different
+capacities.  Any omissions to this list are accidental.  Feel free to
+contact <a href="mailto:green@cygnus.com">green@cygnus.com</a> if you
+have been left out or some of your contributions are not listed.
+Please keep this list in alphabetical order.
+<p>
+<ul>
+<li>Geoff Berry for his object serialization work and various patches.
+<li>Hans-J. Boehm for his <a href="http://reality.sgi.com/boehm/gc.html">garbage collector</a>.
+<li>Per Bothner for dreaming up, designing and implementing much of gcj.
+<li>Jean-Marc Chandonia for various library patches.
+<li>Eric Christopher for his porting help and clean-ups.
+<li>The GCC project <a
+href="http://gcc.cygnus.com/thanks.html">contributors</a> for all of their
+great compiler work.
+<li>Anthony Green for various contributions.
+<li>Stu Grossman for gdb hacking, allowing us to debug our code.
+<li>Andrew Haley for his amazing compiler and library efforts.
+<li>Bryce McKinlay for numerous libgcj fixes and improvements.
+<li>Jason Molenda for maintaining the project infrastructure on
+<a href="http://sourceware.cygnus.com">sourceware.cygnus.com</a>.
+<li>Alexandre Oliva for all of this porting and testing efforts.
+<li>Kresten Krab Thorup for his fantastic bytecode interpreter.
+<li>Warren Levy for his tremendous library work.
+<li>All of the Mauve project <a href="http://sourceware.cygnus.com/cgi-bin/cvsweb.cgi/~checkout~/mauve/THANKS?rev=1.2&cvsroot=mauve&only_with_tag=HEAD">contributors</a>, for test code.
+<li>Rainer Orth for configuration clean-ups and porting help.
+<li>Alexandre Petit-Bianco for implementing much of the compiler, and continued maintainership.
+<li>Jeff Sturm for porting help and encouragement.
+<li>Tom Tromey for his many contributions and libgcj maintainership.
+<li>Matt Welsh for help with Linux Threads.
+<li>Urban Widmark for help fixing java.io.
+<li>Gilles Zunino for help porting to Irix.
+</ul>
+
+We'd also like to thank the folks who have contributed time and energy
+in testing GCJ:
+
+<ul>
+<li>Bonzo Armstrong
+<li>Chris Baldwin
+<li>David Billinghurst
+<li>Jim Blandy
+<li>Stephane Bortzmeyer
+<li>Bradford Castalia
+<li>Richard Emberson
+<li>Mark K. Gardner
+<li>Simon Gornall
+<li>Amancio Hasty 
+<li>Joep Jansen
+<li>Anon A. Mous
+<li>Jon Olson
+<li>Paul Reilly
+<li>Tom Reilly
+<li>Marc Schifer
+<li>Franz Sirl
+</ul>
+
+Thank you all!
 
 </td></tr>
 </table>
-
 <hr>
 
+<address>
+<a href="about.html">The GCJ team</a>
+<br>
+<small>
+$Id: docs.html,v 1.2 1999/09/06 05:57:50 green Exp $
+</small>
+</address>
 
 </body>
 </html>
