--- a/htdocs/java/new/tm.html
+++ b/htdocs/java/new/tm.html
@@ -33,8 +33,6 @@
 
 </td>
 
-<td width=4>
-</td>
 <td width=2 bgcolor="black">
 i
 </td>
@@ -57,7 +55,7 @@ Sun Microsystems, Inc.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id$
+$Id: tm.html,v 1.1 1999/09/06 05:21:30 green Exp $
 </small>
 </address>
 
