Add img values & footers.

--- a/htdocs/java/new/download.html
+++ b/htdocs/java/new/download.html
@@ -7,7 +7,7 @@
 
 <table border=0>
 <tr><td>
-<img src="gcj.jpg">
+<img src="gcj.jpg" alt="gcj logo" width=136 height=98>
 </td></tr>
 <tr>
 <td>
@@ -104,6 +104,13 @@ anonymous cvs repository.  Here's how:
 
 <hr>
 
+<address>
+<a href="about.html">The GCJ team</a>
+<br>
+<small>
+$Id: index.html,v 1.8 1999/09/06 18:18:43 green Exp $
+</small>
+</address>
 
 </body>
 </html>
