--- a/htdocs/java/new/mail.html
+++ b/htdocs/java/new/mail.html
@@ -7,7 +7,7 @@
 
 <table border=0>
 <tr><td>
-<img src="gcj.jpg">
+<img src="gcj.jpg" alt="gcj logo" width=136 height=98>
 </td></tr>
 <tr>
 <td>
@@ -137,7 +137,7 @@ see our <a href="/ml/#faqs">Sourceware mailing list FAQs</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: mail.html,v 1.2 1999/09/06 05:21:30 green Exp $
+$Id: mail.html,v 1.3 1999/09/06 18:18:43 green Exp $
 </small>
 </address>
 
