--- a/htdocs/java/new/docs.html
+++ b/htdocs/java/new/docs.html
@@ -7,7 +7,7 @@
 
 <table border=0>
 <tr><td>
-<img src="gcj.jpg">
+<img src="gcj.jpg" alt="gcj logo" width=136 height=98>
 </td></tr>
 <tr>
 <td>
@@ -155,7 +155,7 @@ conferences and magazines.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: docs.html,v 1.2 1999/09/06 05:57:50 green Exp $
+$Id: docs.html,v 1.3 1999/09/06 18:18:43 green Exp $
 </small>
 </address>
 
