--- a/htdocs/java/new/index.html
+++ b/htdocs/java/new/index.html
@@ -7,7 +7,7 @@
 
 <table border=0>
 <tr><td>
-<img src="gcj.jpg">
+<img src="gcj.jpg" alt="gcj logo" width=136 height=98>
 </td></tr>
 <tr>
 <td valign>
@@ -56,10 +56,7 @@ i
 
 <td>
 
-<br>
-<small>
-<!--#include file="tagline"-->
-..<a href="tagline.html">.</a></small>
+<br><br><br>
 <h1>The GNU Compiler for the Java<sup><a href="tm.html"><small>tm</small></a></sup> Programming Language</h1>
 
 <table border="0" cellpadding="4" width="95%">
@@ -95,7 +92,7 @@ Finally - some new web pages.
 <br>
 
 GCJ is a portable, optimizing, ahead-of-time compiler for the Java
-Progamming Language.  It can compile...
+Programming Language.  It can compile...
 <ul>
 <li>Java source code to native machine code,
 <li>Java source code to Java bytecode (class files),
@@ -140,7 +137,7 @@ part of the <a href="http://www.gnu.org">GNU Project</a>, and released under the
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.7 1999/09/06 06:04:49 green Exp $
+$Id: index.html,v 1.8 1999/09/06 18:18:43 green Exp $
 </small>
 </address>
 
