--- a/htdocs/java/new/tm.html
+++ b/htdocs/java/new/tm.html
@@ -7,7 +7,7 @@
 
 <table border=0>
 <tr><td>
-<img src="gcj.jpg">
+<img src="gcj.jpg" alt="gcj logo" width=136 height=98>
 </td></tr>
 <tr>
 <td>
@@ -55,7 +55,7 @@ Sun Microsystems, Inc.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: tm.html,v 1.1 1999/09/06 05:21:30 green Exp $
+$Id: tm.html,v 1.2 1999/09/06 18:18:43 green Exp $
 </small>
 </address>
 
