Final rough draft.

--- a/htdocs/java/new/about.html
+++ b/htdocs/java/new/about.html
@@ -21,7 +21,7 @@
 <a href="contrib.html">Contributing</a><br>
 <a href="http://sourceware.cygnus.com/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a><br>
 <a href="thanks.html">Thanks</a><br>
-<a href="support.html">Support</a><br>
+<!-- <a href="support.html">Support</a><br> -->
 <br><br><br>
 <a href="http://egcs.cygnus.com">GCC</a><br>
 <a href="http://sourceware.cygnus.com/mauve">The Mauve Project</a><br>
@@ -56,6 +56,11 @@ Like the GCJ sources themselves, the web pages are under CVS control.
 Changes to the CVS repository immediately propagate to the web server
 and you can easily track any changes or contribute some of your own.
 
+<p>
+
+Just like software, we maintain a <a href="ChangeLog">ChangeLog
+file</a> for web page changes.  Please help keep this up to date.
+
 </td></tr>
 </table>
 
@@ -65,7 +70,7 @@ and you can easily track any changes or contribute some of your own.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: about.html,v 1.3 1999/09/06 18:18:43 green Exp $
+$Id: about.html,v 1.4 1999/09/06 19:02:52 green Exp $
 </small>
 </address>
 
