--- a/htdocs/java/new/faq.html
+++ b/htdocs/java/new/faq.html
@@ -21,7 +21,7 @@
 <a href="contrib.html">Contributing</a><br>
 <a href="http://sourceware.cygnus.com/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a><br>
 <a href="thanks.html">Thanks</a><br>
-<a href="support.html">Support</a><br>
+<!-- <a href="support.html">Support</a><br> -->
 <br><br><br>
 <a href="http://egcs.cygnus.com">GCC</a><br>
 <a href="http://sourceware.cygnus.com/mauve">The Mauve Project</a><br>
@@ -41,8 +41,60 @@ i
 
 <td>
 
-<br>
+<br><br>
 <h1>The GCJ FAQ</h1>
+
+<table border="0" cellpadding="4" width="95%">
+<tr bgcolor="#b0d0ff">
+ <th align="left">
+ General FAQ
+ </th>
+</tr>
+</table>
+<br>
+
+    <dl>
+      <dt>What license is used for libgcj?</dt>
+      <dd>libgcj is distributed under the Library GPL.</dd>
+
+      <dt>How can I report a bug in libgcj?</dt>
+      <dd>libgcj has a corresponding
+	<a
+      href="http://sourceware.cygnus.com/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Gnats
+	  bug database</a> which you can browse.  You can also submit new
+	bug reports from the Gnats page.</dd>
+
+      <dt>How can I contribute to libgcj?</dt>
+      <dd>You can send simple bug fixes in as patches.  Please follow
+	the <a href="http://egcs.cygnus.com/contribute.html">GCC guidelines
+	for submitting patches</a>.
+	For more complex changes, you must sign copyright over to
+	Cygnus.  The forms for doing this are not yet available, but
+	will be soon.</dd>
+
+      <dt>How can I debug my Java program?</dt>
+      <dd><a href="ftp://ftp.gnu.org/pub/gnu/gdb/gdb-4.18.tar.gz">gdb
+	4.18</a> includes support for debugging gcj-compiled Java
+	programs.</dd>
+
+      <dt>Why isn't libgcj part of GCC?</dt>
+      <dd>Various minor reasons.  It's likely that libgcj will end up
+	in GCC at some point in the future.</dd>
+
+      <dt>Will gcj and libgcj work on my machine?</dt>
+      <dd>So far gcj and libgcj have only really been tried on Sparc
+	Solaris and x86 Linux.  They might work on other systems, but
+	we don't know.  Generally speaking, porting to a new system
+	should not be hard.  This would be a good way to volunteer.</dd>
+
+      <dt>My program is dumping core!  What's going on?</dt>
+      <dd>I could be any number of things.  One common mistake is 
+        having your <tt>CLASSPATH</tt> environment variable pointing
+	at a third party's java.lang and friends.  Either
+	unset <tt>CLASSPATH</tt>, or make sure it does not refer to 
+        core libraries other than those found in libgcj.zip.</dd>
+
+    </dl>
 
 </td></tr>
 </table>
@@ -53,7 +105,7 @@ i
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.8 1999/09/06 18:18:43 green Exp $
+$Id: faq.html,v 1.3 1999/09/06 19:02:52 green Exp $
 </small>
 </address>
 
