--- a/htdocs/java/new/index.html
+++ b/htdocs/java/new/index.html
@@ -21,7 +21,7 @@
 <a href="contrib.html">Contributing</a><br>
 <a href="http://sourceware.cygnus.com/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a><br>
 <a href="thanks.html">Thanks</a><br>
-<a href="support.html">Support</a><br>
+<!-- <a href="support.html">Support</a><br> -->
 <br><br><br>
 <a href="http://egcs.cygnus.com">GCC</a><br>
 <a href="http://sourceware.cygnus.com/mauve">The Mauve Project</a><br>
@@ -56,7 +56,7 @@ i
 
 <td>
 
-<br><br><br>
+<br><br>
 <h1>The GNU Compiler for the Java<sup><a href="tm.html"><small>tm</small></a></sup> Programming Language</h1>
 
 <table border="0" cellpadding="4" width="95%">
@@ -70,9 +70,9 @@ i
 
 <table>
 <tr><td valign="top">
-<b>September 5, 1999</b>
+<b>September 6, 1999</b>
 </td><td>
-Finally - some new web pages.
+<a href="gcj-announce.txt">One year later</a>... new web pages.
 </td></tr>
 <tr><td valign="top">
 <b>August 26, 1999</b>
@@ -125,8 +125,9 @@ cross-compiler, suitable for embedded systems programming.
 <p>
 
 Gcj, libgcj, gdb and related tools are <a
-href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.  They are
-part of the <a href="http://www.gnu.org">GNU Project</a>, and released under the aegis of GNU.
+href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.  
+
+<!-- They are part of the <a href="http://www.gnu.org">GNU Project</a>, and released under the aegis of GNU.-->
 
 </td></tr>
 </table>
@@ -137,7 +138,7 @@ part of the <a href="http://www.gnu.org">GNU Project</a>, and released under the
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.8 1999/09/06 18:18:43 green Exp $
+$Id: index.html,v 1.9 1999/09/06 19:02:52 green Exp $
 </small>
 </address>
 
