--- a/htdocs/java/new/docs.html
+++ b/htdocs/java/new/docs.html
@@ -21,7 +21,7 @@
 <a href="contrib.html">Contributing</a><br>
 <a href="http://sourceware.cygnus.com/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a><br>
 <a href="thanks.html">Thanks</a><br>
-<a href="support.html">Support</a><br>
+<!-- <a href="support.html">Support</a><br> -->
 <br><br><br>
 <a href="http://egcs.cygnus.com">GCC</a><br>
 <a href="http://sourceware.cygnus.com/mauve">The Mauve Project</a><br>
@@ -41,16 +41,24 @@ i
 
 <td>
 
-<br><br><br>
+<br><br>
 <h1>GCJ Documentation</h1>
 
-    We've written some miscellaneous documentation, plus a FAQ.
+<table border="0" cellpadding="4" width="95%">
+<tr bgcolor="#b0d0ff">
+ <th align="left">
+ General documentation
+ </th>
+</tr>
+</table>
+<br>
+
 
     <ul>
       <li>General <a href="gcj.html">gcj</a> information.
       <li>General <a href="libgcj.html">runtime</a> information.
       <li>How to <a href="compile.html">compile a Java program</a>
-      <li><a href="FAQ.html">Frequently Asked Questions</a>
+      <li><a href="faq.html">Frequently Asked Questions</a>
       <li>How to <a href="contribute.html">contribute</a>
       <li><a href="papers/cni/t1.html">CNI Documentation</a>
     </ul>
@@ -155,7 +163,7 @@ conferences and magazines.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: docs.html,v 1.3 1999/09/06 18:18:43 green Exp $
+$Id: docs.html,v 1.4 1999/09/06 19:02:52 green Exp $
 </small>
 </address>
 
