--- a/htdocs/java/new/support.html
+++ b/htdocs/java/new/support.html
@@ -21,7 +21,7 @@
 <a href="contrib.html">Contributing</a><br>
 <a href="http://sourceware.cygnus.com/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a><br>
 <a href="thanks.html">Thanks</a><br>
-<a href="support.html">Support</a><br>
+<!-- <a href="support.html">Support</a><br> -->
 <br><br><br>
 <a href="http://egcs.cygnus.com">GCC</a><br>
 <a href="http://sourceware.cygnus.com/mauve">The Mauve Project</a><br>
@@ -53,7 +53,7 @@ i
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.8 1999/09/06 18:18:43 green Exp $
+$Id: support.html,v 1.3 1999/09/06 19:02:52 green Exp $
 </small>
 </address>
 
