--- a/htdocs/java/new/thanks.html
+++ b/htdocs/java/new/thanks.html
@@ -21,7 +21,7 @@
 <a href="contrib.html">Contributing</a><br>
 <a href="http://sourceware.cygnus.com/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a><br>
 <a href="thanks.html">Thanks</a><br>
-<a href="support.html">Support</a><br>
+<!-- <a href="support.html">Support</a><br> -->
 <br><br><br>
 <a href="http://egcs.cygnus.com">GCC</a><br>
 <a href="http://sourceware.cygnus.com/mauve">The Mauve Project</a><br>
@@ -41,8 +41,17 @@ i
 
 <td>
 
-<br><br><br>
+<br><br>
 <h1>GCJ Credits</h1>
+
+<table border="0" cellpadding="4" width="95%">
+<tr bgcolor="#b0d0ff">
+ <th align="left">
+ Thanks!
+ </th>
+</tr>
+</table>
+<br>
 
 Many people contribute to the GCJ project, and in many different
 capacities.  Any omissions to this list are accidental.  Feel free to
@@ -111,7 +120,7 @@ Thank you all!
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: thanks.html,v 1.2 1999/09/06 18:18:43 green Exp $
+$Id: thanks.html,v 1.3 1999/09/06 19:02:52 green Exp $
 </small>
 </address>
 
