Fixes from tromey

--- a/htdocs/java/new/download.html
+++ b/htdocs/java/new/download.html
@@ -93,11 +93,13 @@ Libgcj snapshots are made nightly, and are available from
 <h3>cvs</h3> 
 The easiest way to get libgcj is to check it out from the
 anonymous cvs repository.  Here's how:
+<small>
 <pre>
-  cvs -d :pserver:anoncvs@anoncvs.cygnus.com:/cvs/java login
-    (password is ``anoncvs'')
-  cvs -z 9 -d :pserver:anoncvs@anoncvs.cygnus.com:/cvs/java co libgcj
+cvs -d:pserver:anoncvs@anoncvs.cygnus.com:/cvs/java login
+  (password is ``anoncvs'')
+cvs -z9 -d:pserver:anoncvs@anoncvs.cygnus.com:/cvs/java co libgcj
 </pre>
+</small>
 
 </td></tr>
 </table>
@@ -108,7 +110,7 @@ anonymous cvs repository.  Here's how:
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: download.html,v 1.3 1999/09/06 19:02:52 green Exp $
+$Id: download.html,v 1.4 1999/09/06 19:37:26 green Exp $
 </small>
 </address>
 
