--- a/htdocs/java/new/faq.html
+++ b/htdocs/java/new/faq.html
@@ -69,8 +69,8 @@ i
 	the <a href="http://egcs.cygnus.com/contribute.html">GCC guidelines
 	for submitting patches</a>.
 	For more complex changes, you must sign copyright over to
-	Cygnus.  The forms for doing this are not yet available, but
-	will be soon.</dd>
+	Cygnus.  See the <a href="contrib.html">contribution</a> page
+	for details.</dd>
 
       <dt>How can I debug my Java program?</dt>
       <dd><a href="ftp://ftp.gnu.org/pub/gnu/gdb/gdb-4.18.tar.gz">gdb
@@ -105,7 +105,7 @@ i
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: faq.html,v 1.3 1999/09/06 19:02:52 green Exp $
+$Id: faq.html,v 1.4 1999/09/06 19:37:26 green Exp $
 </small>
 </address>
 
