--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -1,165 +1,146 @@
 <html>
-<head>
-<title>Sourceware to Work In the Java-TM Language</title>
-</head>
-<!--#include virtual="/include/header-subpages.html"-->
+<title>GCJ - Home Page</title>
+<body bgcolor="white">
 
-<h2 align=center>Cygnus Sourceware Project for the 
-                 Java<sup><a href="#javatm">tm</a></sup> Language</h2>
+<table border=0>
+<tr><td valign="top">
 
-<p>We're developing a complete free software toolkit for developing in
-the Java Language.
-
-    <blockquote>
-      <p><b>New</b>: We've released version <a
-	href="ftp://sourceware.cygnus.com/pub/java/libgcj-2.95.1.tar.gz">2.95.1
-	  of the ``libgcj'' runtime</a>!  This version corresponds with
-	the <a
-	  href="http://egcs.cygnus.com/gcc-2.95/gcc-2.95.1.html">gcc
-	  2.95.1 release</a>.
-    </blockquote>
-
-<h2>Mailing lists</h2>
-
-<p>We have four mailing lists set up for our Java related
-work: 
-
-<dl>
-<dt><b><a href="/ml/java-announce/">java-announce</a></b></dt>
-<dd>
-   Low volume, moderated, announcements-only mailing list,
-</dd>
-<dt><b><a href="/ml/java-discuss/">java-discuss</a></b></dt>
-<dd>
-   Moderate volume discussion/question mailing list,
-</dd>
-<dt><b><a href="/ml/java-patches/">java-patches</a></b></dt>
-<dd>
-   Moderate volume patch submission/discussion mailing list.
-</dd>
-<dt><b><a href="/ml/java-prs/">java-prs</a></b></dt>
-<dd>
-   Notification of new Java PRs.
-</dd>
-</dl>
-
-<p>Use this handy little form to subscribe or unsubscribe from any
-of these lists:
-
-<blockquote>
-<form method="get" action="/cgi-bin/ml-request">
-  Mailing list: 
-  <select name="listname">
-   <option value="java-announce">java-announce
-   <option value="java-discuss">java-discuss
-   <option value="java-patches">java-patches
-   <option value="java-prs">java-prs
-  </select>
-  <tt>&nbsp;</tt>
-  Your e-mail address:
-  <input type="text" name="username" size="14">
- <br>
-  <input type="checkbox" name="digest">Digest version
-  <tt>&nbsp;</tt>
-  <select name="operation">
-    <option value="subscribe">subscribe
-    <option value="unsubscribe">unsubscribe
-  </select>
-  <tt>&nbsp;</tt>
- <input type="Submit" name="submit" value="Send in the request">
+<table border=0>
+<tr><td>
+<img src="gcj.jpg" alt="gcj logo" width=136 height=98>
+</td></tr>
+<tr>
+<td valign>
+<br>
+<table border=0><tr><td width="10"></td><td>
+<a href="index.html">Home</a><br>
+<a href="faq.html">FAQ</a><br>
+<a href="mail.html">Mailing Lists</a><br>
+<a href="docs.html">Documentation</a><br>
+<a href="download.html">Download</a><br>
+<a href="contrib.html">Contributing</a><br>
+<a href="http://sourceware.cygnus.com/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a><br>
+<a href="thanks.html">Thanks</a><br>
+<!-- <a href="support.html">Support</a><br> -->
+<br><br><br>
+<a href="http://egcs.cygnus.com">GCC</a><br>
+<a href="http://sourceware.cygnus.com/mauve">The Mauve Project</a><br>
+<a href="http://sourceware.cygnus.com">Sourceware</a><br>
+<a href="http://www.gnu.org">The GNU Project</a><br>
+<a href="http://www.cygnus.com">Cygnus Solutions</a><br>
+</td></tr></table>
+<br><br><br>
+<table border=0><tr><td width="10"></td><td>
+<small>
+<form method="get" action="http://sourceware.cygnus.com/cgi-bin/ml-request">
+Get our announcements:<br>
+<input type="hidden" name="digest" value="off">
+<input type="hidden" name="operation" value="subscribe">
+<input type="hidden" name="listname" value="java-announce">
+<input type="text" name="username" value="your e-mail-address" size="20">
+<br>
+<input type="Submit" name="submit" value="Subscribe!">
 </form>
-</blockquote>
+</small>
+</td></tr></table>
 
-<p>If you have any questions about the mailing lists on this site,
-see our <a href="/ml/#faqs">Sourceware mailing list FAQs</a>.
+</td></tr></table>
 
-<h2>Documentation</h2>
+</td>
 
-    We've written some miscellaneous documentation, plus a FAQ.
+<td width=2 bgcolor="black">
+i
+</td>
+<td width=6>
+</td>
 
-    <ul>
-      <li>General <a href="gcj.html">gcj</a> information.
-      <li>General <a href="libgcj.html">runtime</a> information.
-      <li>How to <a href="compile.html">compile a Java program</a>
-      <li><a href="FAQ.html">Frequently Asked Questions</a>
-      <li>How to <a href="contribute.html">contribute</a>
-      <li><a href="papers/cni/t1.html">CNI Documentation</a>
-      <li>How to <a href="port-threads.html">port</a> the thread layer.
-      <li>How to <a href="port-files.html">port</a> the file handling layer.
-      <li>How to <a href="port-signals.html">port</a> the signal handling layer.
-    </ul>
+<td>
 
-<h2>Papers describing our work</h2>
+<br><br>
+<h1>The GNU Compiler for the Java<sup><a href="tm.html"><small>tm</small></a></sup> Programming Language</h1>
 
-<p>The engineers on this project have written a number of papers for
-conferences and magazines.
+<table border="0" cellpadding="4" width="95%">
+<tr bgcolor="#b0d0ff">
+ <th align="left">
+ GCJ News
+ </th>
+</tr>
+</table>
+<br>
 
+<table>
+<tr><td valign="top">
+<b>September 6, 1999</b>
+</td><td>
+<a href="gcj-announce.txt">One year later</a>... new web pages.
+</td></tr>
+<tr><td valign="top">
+<b>August 26, 1999</b>
+</td><td>
+<a href="http://sourceware.cygnus.com/ml/java-announce/1999/msg00005.html">Libgcj 2.95.1 is released</a>!  This version corresponds to the GCC 2.95.1 release.
+</td></tr>
+</table>
+
+<br>
+<table border="0" cellpadding="4" width="95%">
+<tr bgcolor="#b0d0ff">
+ <th align="left">
+ What is GCJ?
+ </th>
+</tr>
+</table>
+<br>
+
+GCJ is a portable, optimizing, ahead-of-time compiler for the Java
+Programming Language.  It can compile...
 <ul>
-  <li><a name="CNI">
-      <b>February 1999</b>: "<cite>The Cygnus Native Interface for C++/Java Integration</cite>"
-       <br>[<a href="papers/cni/t1.html">HTML</a>] 
-           [<a href="papers/cni.sgml">SGML/Docbook source</a>]
-       <br>This is a programmer's manual which explains how to use
-       a Java-aware C++ compiler (G++) to write native methods for Gcj.
-       <br>The CNI design and ideas were proposed in
-       "<cite>Writing native Java methods in natural C++</cite>"
-       (November 1997).
-       <p>
-
-  <li><b>August 1998</b>: "<cite>No Silver Bullet - Garbage Collection for 
-      Java in Embedded Systems</cite>".
-      <br>[<a href="papers/nosb.html">HTML</a>] 
-          [<a href="papers/nosb.ps.gz">PS for presentation slides</a>]
-      <br>Author:  <a href="http://www.cygnus.com/~apbianco/">Alex Petit-Bianco</a>.
-      <p>
-
-  <li><b>November 1997</b>:  "<cite>Writing native Java methods in natural C++</cite>"
-      discusses interaction between Java and C++.  This is an early design
-      document;  see "<cite>The Cygnus Native Interface for C++/Java 
-      Integration</cite>" (February 1998) for the programmer's manual.
-      <br>[<a href="papers/native++.html">HTML</a>] 
-          [<a href="papers/native++.sgml">SGML/Docbook source</a>]
-      <br>Author: <a href="http://www.cygnus.com/~bothner/">Per Bothner</a>.
-      <p>
-
-  <li><b>October 1997</b>: "<cite>Compiling Java for Embedded Systems</cite>"
-      was presented by Per Bothner at the Embedded Systems Conference 
-      West in San Jose.  It provides a technical overview 
-      of our strategy and plans.  
-
-      <br>[<a href="http://www.cygnus.com/news/whitepapers/compiling.html">HTML</a>] 
-          [<a href="papers/compjava.pdf">PDF</a>] 
-          [<a href="papers/compjava.ps.gz">gzip'd Postscript</a>] 
-          [<a href="papers/esc97.sgml">SGML/Docbook source</a>] 
-          [<a href="papers/esc97w-slides.ps.gz">PS 
-          for presentation slides</a>].
-
-      <br>Author: <a href="http://www.cygnus.com/~bothner/">Per Bothner</a>.
-      <p>
-
-  <li><b>February 1997</b>: "<cite>A Gcc-based Java Implementation</cite>" is an older paper
-      presented by Per Bothner
-      at IEEE Compcon.  
-      <br>[<a href="papers/gcc-java.html">extended
-          abstract (HTML)</a>] 
-          [<a href="papers/gcc-java.ps.gz">complete
-          paper (Postscript)</a>]
-          [(<a href="papers/compcon97.ps.gz">slides 
-          for presentation</a>)]
-
-      <br>Author: <a href="http://www.cygnus.com/~bothner/">Per Bothner</a>.
-      <p>
-
+<li>Java source code to native machine code,
+<li>Java source code to Java bytecode (class files),
+<li>and Java bytecode to native machine code.
 </ul>
 
+Before executing your compiled application, you must link it with
+the GCJ runtime, libgcj, which consists of...
+<ul>
+<li>the core class libraries,
+<li>a garbage collector library,
+<li>an abstraction over the system threads,
+<li>and, optionally, a bytecode interpreter.
+</ul>
+
+The addition of the bytecode interpreter means that GCJ compiled
+applications can dynamically load and interpret class files, resulting
+in mixed compiled/interpreted systems.
+
+<p>
+
+Compiled Java applications are debugged using recent versions of the
+GNU debugger, <a href="http://sourceware.cygnus.com/gdb">GDB</a>.
+
+<p>
+
+In addition to regular native programming, GCJ can be configured as a
+cross-compiler, suitable for embedded systems programming.
+
+<p>
+
+Gcj, libgcj, gdb and related tools are <a
+href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.  
+
+<!-- They are part of the <a href="http://www.gnu.org">GNU Project</a>, and released under the aegis of GNU.-->
+
+</td></tr>
+</table>
 
 <hr>
 
-<blockquote>
-  <a name="javatm">Java</a> and all Java-based marks are trademarks or
-  registered trademarks of Sun Microsystems, Inc. in the United States
-  and other countries. The Free Software Foundation and Cygnus Solutions
-  are independent of Sun Microsystems, Inc.
-</blockquote>
+<address>
+<a href="about.html">The GCJ team</a>
+<br>
+<small>
+$Id: index.html,v 1.10 1999/09/06 19:37:26 green Exp $
+</small>
+</address>
 
-<!--#include virtual="/include/footer-subpages.html"-->
+</body>
+</html>
