--- a/htdocs/java/docs.html
+++ b/htdocs/java/docs.html
@@ -55,8 +55,8 @@ i
 
 
     <ul>
-      <li>General <a href="gcj.html">gcj</a> information.
-      <li>General <a href="libgcj.html">runtime</a> information.
+      <li>General <a href="gcj2.html">gcj</a> information.
+      <li>General <a href="libgcj2.html">runtime</a> information.
       <li>How to <a href="compile.html">compile a Java program</a>
       <li><a href="faq.html">Frequently Asked Questions</a>
       <li>How to <a href="contrib.html">contribute</a>
@@ -163,7 +163,7 @@ conferences and magazines.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: docs.html,v 1.5 1999/09/06 19:37:26 green Exp $
+$Id: docs.html,v 1.1 1999/09/07 00:34:01 green Exp $
 </small>
 </address>
 
