--- a/htdocs/java/libgcj.html
+++ b/htdocs/java/libgcj.html
@@ -1,93 +1,15 @@
 <html>
 <head>
-<title>The libgcj home page</title>
-</head>
-<!--#include virtual="/include/header-subpages.html"-->
+<meta http-equiv="Refresh" content="6; URL=http://sourceware.cygnus.com/java/">
+<title>The GCJ page has moved...</title>
+<body>
+This page has moved to <a href="http://sourceware.cygnus.com/java/">http://sourceware.cygnus.com/java</a>.
+<p>
+You should be taken to the new location automatically.
+<p>
+If not, click <a href="http://sourceware.cygnus.com/java/">here</a>.
+<p>
+Remember to update your links!
+</body>
+</html>
 
-    <h2 align=center>The libgcj home page</h2>
-
-    <h2>What is it?</h2>
-    
-    <p>``libgcj'' is the runtime that goes along with the <a
-    href="gcj.html">gcj</a> front end to GCC.  libgcj includes parts
-    of the Java Class Libraries, plus glue to connect the libraries to
-    the compiler and the underlying OS.
-
-    <h2>What you get</h2>
-
-    <p>libgcj eventually builds a couple of libraries (one for the
-    runtime and one for the garbage collector), a ``zip'' version of
-    the class libraries, and a program called ``jv-convert'' which can
-    be used to do character encoding transformations.
-
-    <h2>What is missing?</h2>
-
-    <p>The runtime is not yet fully complete.  Parts of the standard
-    class libraries are missing, and some libraries (such as AWT) have
-    not even been started.  Also, there is <emph>not</emph> a bytecode
-    interpreter; the runtime currently assumes your application will
-    be entirely compiled.
-
-    <h2>How to get it</h2>
-
-    <p>The easiest way to get libgcj is to check it out from the
-    anonymous cvs repository.  Here's how:
-    <pre>
-      cvs -d :pserver:anoncvs@anoncvs.cygnus.com:/cvs/java login
-        (password is ``anoncvs'')
-      cvs -z 9 -d :pserver:anoncvs@anoncvs.cygnus.com:/cvs/java co libgcj
-    </pre>
-
-    <p>For those without cvs access, you can find libgcj snapshots
-    in <a href="ftp://sourceware.cygnus.com/pub/java/snapshots/">ftp://sourceware.cygnus.com/pub/java/snapshots/</a>.
-
-    <p>You can also <a href="/cgi-bin/cvsweb.cgi/libgcj/?cvsroot=java">
-	view the cvs archive</a> via cvsweb.
-
-    <h2>How to build it</h2>
-
-    <p>libgcj follows the typical GNU style for configuration and
-    building.  You'll need to have gcj built and in your PATH before
-    you try to build libgcj.  Once you've done that, the following
-    should suffice (note that builds in the source tree probably will
-    not work at the current time):
-
-      <pre>
-      mkdir build
-      cd build
-      ../libgcj/configure
-      make
-      make install
-      </pre>
-
-    There are a few options you might consider passing to
-    ``configure'':
-
-    <dl>
-      <dt>--enable-java-gc=TYPE</dt>
-      <dd>Enables the garbage collector.  The default type is
-      ``boehm'', for the Boehm conservative GC.  Note that libgcj must
-      be configured with the same collector specified when building
-      gcj itself.</dd>
-
-      <dt>--enable-fast-character</dt>
-      <dd>libgcj includes two implementations of java.lang.Character.
-      The default implementation is small, but slow.  This option will
-      enable the faster, larger code.</dd>
-
-      <dt>--enable-threads=TYPE</dt>
-      <dd>libgcj includes a retargetable thread layer.  The value of
-	this option must be the same as the value used when building
-	gcj itself.
-	By default, no threads will be used (this is a crummy default,
-	but we just follow GCC here).
-	The only supported values are ``none'' (for no threads) and
-	``posix'' (for POSIX threads).</dd>
-
-    </dl>
-
-<hr>
-
-    <a href="index.html">Back to main page</a>
-
-<!--#include virtual="/include/footer-subpages.html"-->
