Add details (and workarounds) for Sun make problems. Originally by Hans-Peter Nilsson <hans-peter.nilsson@axis.com>.

--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -442,6 +442,17 @@ http://www.sunfreeware.com</a>.</p>
 See the <a href="../faq.html#squangle">How to work around too long C++
 symbol names?</a> FAQ entry.</p>
 
+<p>Sun make in all known Solaris 1 (SunOS 4) and Solaris 2 releases has a
+broken <i>VPATH</i> mechanism, which means you must either:
+<ul>
+  <li>Use GNU make (recommended), <em>or:</em></li>
+  <li>Always build in the source directory, <em>or:</em></li>
+  <li><em>(For GCC 2.95.1 only)</em>
+      apply the patches mentioned at
+      <a href="http://www.gnu.org/software/gcc/egcstensions.html#sun-make">
+      http://www.gnu.org/software/gcc/egcstensions.html#sun-make</a>.</li>
+</ul></p>
+
 
 <hr>
 <h3><a name="sparc-sun-solaris*">sparc-sun-solaris*</a></h3>
@@ -512,7 +523,7 @@ will be discarded automatically.</p>
 
 <hr>
 <p><a href="./index.html">Return to the GCC Installation page</a></p>
-<p><i>Last modified on August 29, 1999.</i></p>
+<p><i>Last modified on September 11, 1999.</i></p>
 
 </body>
 </html>
