Reduce width of navigation bar; add a missing <BR>.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -7,7 +7,7 @@
 
 <TABLE>
 <TR>
-<TD VALIGN="TOP" WIDTH="8%" BGCOLOR="#FFFFBB">
+<TD VALIGN="TOP" WIDTH="1%" BGCOLOR="#FFFFBB">
 <H2>About</H2>
 <P>
 <A HREF="gccmission.html">Mission Statement</A><BR>
@@ -48,7 +48,7 @@
 
 <P><SMALL>
 <FORM METHOD="get" ACTION="http://egcs.cygnus.com/cgi-bin/ml-request">
-  Get our announcements:
+  Get our announcements:<BR>
   <INPUT TYPE="hidden" NAME="digest"    VALUE="off">
   <INPUT TYPE="hidden" NAME="operation" VALUE="subscribe">
   <INPUT TYPE="hidden" NAME="listname"  VALUE="gcc-announce">
@@ -161,7 +161,7 @@ version 2.95</a> Java runtime libraries for use with GCC 2.95.
 <address>
 <a href="about.html">The GCC team</a>
 <br>
-<small><i>Last modified on September 3, 1999.</i></small>
+<small><i>Last modified on September 11, 1999.</i></small>
 </address>
 
 </body>
