Provide full URL for testresults so that the www.gnu.org mirror can access the testing database

--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -203,7 +203,7 @@ HP aCC symbols.
 
 <dt><b>November 26, 1998</b></dt>
 <dd>
-A <a href="/testresults/">database with test results</a>
+A <a href="http://gcc.gnu.org/testresults/">database with test results</a>
 is now available online, thanks to Marc Lehmann.
 </dd>
 
