New mirror in Turkey.

--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -58,6 +58,7 @@ thanks to <a href="mailto:ktroulos@noc.ntua.gr">Costas Troulos</a>.
 <li>Russia: <a href="ftp://ftp.nc.orc.ru/pub/egcs">ftp.nc.orc.ru</a>
 <li>Russia (Moscow, no snapshots): <a href="ftp://linux.ihep.su/pub/cygnus/egcs">linux.ihep.su</a>
 <li>Hsin-Chu, Taiwan: <a href="ftp://ftp.cis.nctu.edu.tw/Languages/egcs">ftp.cis.nctu.edu.tw</a>, thanks to <a href="mailto:help@cis.nctu.edu.tw"> Henry Shieh</a>.
+<li>Turkey (Izmir): <a href="ftp://ftp://gcc.deu.edu.tr">gcc.deu.edu.tr</a>
 </ul>
 
 <p>These sites are mirroring <tt>ftp.goof.com</tt>'s site, so we get to mooch
@@ -84,7 +85,7 @@ where the mirror is located.
 <p><a href="index.html">Return to the GCC home page</a>
 
 <hr>
-<i>Last modified on August 22, 1999.</i>
+<i>Last modified on September 20, 1999.</i>
 
 </body>
 </html>
