Add news items for global null pointer test elimination and global code hoisting/unification optimization passes.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -104,6 +104,13 @@ maintain and improve quality.
 
 <dl>
 
+<dt><b>September 20, 1999</b></dt>
+<dd>
+Cygnus Solutions has donated two new global optimizers to GCC.
+<a href="news/null.html">Global Null Pointer Test Elimination</a> and
+<a href="news/unify.html">Global Code Hoisting/Unification</a>.
+</dd>
+
 <dt><b>September 3, 1999</b></dt>
 <dd>
 Long time GCC contributors Mark Mitchell and Richard Kenner have been
@@ -161,7 +168,7 @@ version 2.95</a> Java runtime libraries for use with GCC 2.95.
 <address>
 <a href="about.html">The GCC team</a>
 <br>
-<small><i>Last modified on September 11, 1999.</i></small>
+<small><i>Last modified on September 20, 1999.</i></small>
 </address>
 
 </body>
