Add fr30 news item.  Rotate old news.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -104,6 +104,17 @@ maintain and improve quality.
 
 <dl>
 
+<dt><b>September 21, 1999</b></dt>
+<dd>
+Nick Clifton of Cygnus Solutions has donated support for the Fujitsu
+FR30 processor.  The FR30 is a low-cost 32bit cpu intended for larger
+embedded applications.  It has a simple load/store architecture, 16
+general registers and a variable length instruction set.  Additional
+details about the FR30 can be found at
+<a href="http://www.fmap.com.sg/products/mcu_fr30.htm">Fujitsu's web
+site</a>.
+</dd>
+
 <dt><b>September 20, 1999</b></dt>
 <dd>
 Cygnus Solutions has donated two new global optimizers to GCC.
@@ -136,24 +147,6 @@ targets as they appear.
 version 2.95.1</a> Java runtime libraries for use with GCC 2.95.1.
 </dd>
 
-<dt><b>August 19, 1999</b></dt>
-<dd>
-<a href="gcc-2.95/gcc-2.95.1.html">GCC 2.95.1 is released</a>.
-</dd>
-
-<dt><b>August 4, 1999</b></dt>
-<dd>
-A new snapshot of the new
-<a href="ftp://sourceware.cygnus.com/pub/libstdc++/libstdc++-2.90.6.tar.gz">
-Standard C++ Library V3</a> has been released.  You can find more information
-from the
-<a href="http://sourceware.cygnus.com/libstdc++/">libstdc++ project's home page</a>.
-
-<p>Cygnus Solutions has released 
-<a href="ftp://sourceware.cygnus.com/pub/java/libgcj-2.95.tar.gz">libgcj
-version 2.95</a> Java runtime libraries for use with GCC 2.95.
-</dd>
-
 </dl>
 
 <a href="news.html">Older news and announcements...</a>
@@ -168,7 +161,7 @@ version 2.95</a> Java runtime libraries for use with GCC 2.95.
 <address>
 <a href="about.html">The GCC team</a>
 <br>
-<small><i>Last modified on September 20, 1999.</i></small>
+<small><i>Last modified on September 21, 1999.</i></small>
 </address>
 
 </body>
