--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -10,6 +10,24 @@ home page</a>.
 
 <dl>
 
+<dt><b>August 19, 1999</b></dt>
+<dd>
+<a href="gcc-2.95/gcc-2.95.1.html">GCC 2.95.1 is released</a>.
+</dd>
+
+<dt><b>August 4, 1999</b></dt>
+<dd>
+A new snapshot of the new
+<a href="ftp://sourceware.cygnus.com/pub/libstdc++/libstdc++-2.90.6.tar.gz">
+Standard C++ Library V3</a> has been released.  You can find more information
+from the
+<a href="http://sourceware.cygnus.com/libstdc++/">libstdc++ project's home page</a>.
+
+<p>Cygnus Solutions has released
+<a href="ftp://sourceware.cygnus.com/pub/java/libgcj-2.95.tar.gz">libgcj
+version 2.95</a> Java runtime libraries for use with GCC 2.95.
+</dd>
+
 <dt><b>August 2, 1999</b></dt>
 <dd>
 Mumit Khan has
@@ -358,7 +376,7 @@ framework</b></a>.
 </dl>
 
 <hr>
-<i>Last modified on September 3, 1999.</i>
+<i>Last modified on September 20, 1999.</i>
 
 </body>
 </html>
