--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -74,6 +74,9 @@ Successful
 <p><b>i486-pc-linux-gnulibc1</b><br>
 Successful
 
+<p><b>i486-pc-linux-gnu</b><br>
+Successful
+
 <p><b>i586-pc-linux-gnu</b><br>
 Successful
 
@@ -145,7 +148,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on September 5, 1999.</i>
+<i>Last modified on September 21, 1999.</i>
 
 </body>
 </html>
